; ModuleID = '/home/carl/AnghaBench/micropython/ports/teensy/extr_usb.c_usb_vcp_is_connected.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/teensy/extr_usb.c_usb_vcp_is_connected.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@usb_configuration = common dso_local global i64 0, align 8
@usb_cdc_line_rtsdtr = common dso_local global i32 0, align 4
@USB_SERIAL_DTR = common dso_local global i32 0, align 4
@USB_SERIAL_RTS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @usb_vcp_is_connected() #0 {
  %1 = load i64, i64* @usb_configuration, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %10

3:                                                ; preds = %0
  %4 = load i32, i32* @usb_cdc_line_rtsdtr, align 4
  %5 = load i32, i32* @USB_SERIAL_DTR, align 4
  %6 = load i32, i32* @USB_SERIAL_RTS, align 4
  %7 = or i32 %5, %6
  %8 = and i32 %4, %7
  %9 = icmp ne i32 %8, 0
  br label %10

10:                                               ; preds = %3, %0
  %11 = phi i1 [ false, %0 ], [ %9, %3 ]
  %12 = zext i1 %11 to i32
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
